--- a/tests/resources/crd/v17/condition.yaml
+++ b/tests/resources/crd/v17/condition.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: policies-v12.beta.appgate.com
+  name: conditions-v17.beta.appgate.com
 spec:
   group: beta.appgate.com
   names:
-    kind: Policy-v12
-    plural: policies-v12
+    kind: Condition-v17
+    plural: conditions-v17
     shortNames:
-    - pol-v12
-    singular: policy-v12
+    - con-v17
+    singular: condition-v17
   scope: Namespaced
   versions:
   - name: v1
@@ -18,21 +18,6 @@ spec:
         properties:
           spec:
             properties:
-              administrativeRoles:
-                items:
-                  type: string
-                type: array
-              disabled:
-                default: false
-                type: boolean
-              entitlementLinks:
-                items:
-                  type: string
-                type: array
-              entitlements:
-                items:
-                  type: string
-                type: array
               expression:
                 type: string
               name:
@@ -40,13 +25,27 @@ spec:
               notes:
                 default: ''
                 type: string
-              overrideSite:
+              remedyLogic:
+                default: and
                 type: string
-              ringfenceRuleLinks:
+              remedyMethods:
                 items:
-                  type: string
+                  properties:
+                    claimSuffix:
+                      default: ''
+                      type: string
+                    message:
+                      type: string
+                    providerId:
+                      type: string
+                    type:
+                      type: string
+                  required:
+                  - type
+                  - message
+                  type: object
                 type: array
-              ringfenceRules:
+              repeatSchedules:
                 items:
                   type: string
                 type: array
@@ -54,9 +53,6 @@ spec:
                 items:
                   type: string
                 type: array
-              tamperProofing:
-                default: true
-                type: boolean
             required:
             - name
             - expression
