--- a/tests/resources/crd/v17/policy.yaml
+++ b/tests/resources/crd/v17/policy.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: policies-v14.beta.appgate.com
+  name: policies-v17.beta.appgate.com
 spec:
   group: beta.appgate.com
   names:
-    kind: Policy-v14
-    plural: policies-v14
+    kind: Policy-v17
+    plural: policies-v17
     shortNames:
-    - pol-v14
-    singular: policy-v14
+    - pol-v17
+    singular: policy-v17
   scope: Namespaced
   versions:
   - name: v1
@@ -22,9 +22,55 @@ spec:
                 items:
                   type: string
                 type: array
+              clientSettings:
+                properties:
+                  addRemoveProfiles:
+                    default: ''
+                    type: string
+                  attentionLevel:
+                    default: ''
+                    type: string
+                  autoStart:
+                    default: ''
+                    type: string
+                  enabled:
+                    default: false
+                    type: boolean
+                  entitlementsList:
+                    default: ''
+                    type: string
+                  keepMeSignedIn:
+                    default: ''
+                    type: string
+                  quit:
+                    default: ''
+                    type: string
+                  samlAutoSignIn:
+                    default: ''
+                    type: string
+                  signOut:
+                    default: ''
+                    type: string
+                  suspend:
+                    default: ''
+                    type: string
+                type: object
               disabled:
                 default: false
                 type: boolean
+              dnsSettings:
+                items:
+                  properties:
+                    domain:
+                      type: string
+                    servers:
+                      items:
+                        type: string
+                      type: array
+                  required:
+                  - domain
+                  type: object
+                type: array
               entitlementLinks:
                 items:
                   type: string
@@ -42,9 +88,13 @@ spec:
                 type: string
               overrideSite:
                 type: string
+              overrideSiteClaim:
+                default: ''
+                type: string
               proxyAutoConfig:
                 properties:
                   enabled:
+                    default: false
                     type: boolean
                   persist:
                     type: boolean
@@ -73,8 +123,12 @@ spec:
                     default: ''
                     type: string
                   enabled:
+                    default: false
                     type: boolean
                 type: object
+              type:
+                default: Mixed
+                type: string
             required:
             - name
             - expression
