--- a/k8s/chart/templates/deployment.yaml
+++ b/k8s/chart/templates/deployment.yaml
@@ -81,7 +81,7 @@ spec:
             {{- end }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.sdp.operator.image.repository }}/sdp-operator:{{ .Values.sdp.operator.version | default .Chart.AppVersion }}"
+          image: "{{ .Values.sdp.operator.image.repository }}/sdp-operator:{{ .Values.sdp.operator.image.tag | default .Values.sdp.operator.version }}"
           imagePullPolicy: {{ .Values.sdp.operator.image.pullPolicy }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
