--- a/k8s/chart/values.yaml
+++ b/k8s/chart/values.yaml
@@ -19,7 +19,7 @@ sdp:
   ## @param sdp.operator.caCert SDP Operator host CA cert
   ## @param sdp.operator.fernetKey SDP Operator Fernet Key
   ## @param sdp.operator.configMapMt SDP Operator metadata configmap
-  ## @param sdp.operator.image.tag SDP Operator image tag
+  ## @param sdp.operator.image.tag SDP Operator image tag. If unspecified, the deployment will use .sdp.operator.version as tag
   ## @param sdp.operator.image.pullPolicy SDP Operator pull policy
   operator:
     logLevel: info
@@ -38,7 +38,7 @@ sdp:
       ## @param sdp.operator.image.repository SDP operator image registry
       ## @param sdp.operator.image.pullSecrets SDP operator pull secret
       repository: ghcr.io/appgate/sdp-operator
-      tag: latest
+      tag: ""
       ## Optionally specify an array of imagePullSecrets.
       ## Secrets must be manually created in the namespace.
       ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
