Replace underscore with period in CRD for snmp.conf

--- a/tests/resources/crd/v17/appliance.yaml
+++ b/tests/resources/crd/v17/appliance.yaml
@@ -620,7 +620,7 @@ spec:
                   enabled:
                     default: false
                     type: boolean
-                  snmpd_conf:
+                  snmpd.conf:
                     default: ''
                     type: string
                   tcpPort:
