Enable v15 CRD test

--- a/tests/resources/crd/v15/appliance.yaml
+++ b/tests/resources/crd/v15/appliance.yaml
@@ -599,7 +599,7 @@ spec:
                   enabled:
                     default: false
                     type: boolean
-                  snmpd_conf:
+                  snmpd.conf:
                     default: ''
                     type: string
                   tcpPort:
