--- a/tests/resources/crd/v15/identityprovider.yaml
+++ b/tests/resources/crd/v15/identityprovider.yaml
@@ -106,6 +106,7 @@ spec:
                 default: 0
                 type: integer
               name:
+                default: ''
                 type: string
               notes:
                 default: ''
@@ -205,7 +206,6 @@ spec:
                 default: sAMAccountName
                 type: string
             required:
-            - name
             - type
             type: object
         type: object
