Update CRDs for v14

--- a/tests/resources/crd/v14/appliance.yaml
+++ b/tests/resources/crd/v14/appliance.yaml
@@ -536,7 +536,7 @@ spec:
                   enabled:
                     default: false
                     type: boolean
-                  snmpd_conf:
+                  snmpd.conf:
                     default: ''
                     type: string
                   tcpPort:
