--- a/tests/resources/crd/v14/identityprovider.yaml
+++ b/tests/resources/crd/v14/identityprovider.yaml
@@ -107,6 +107,7 @@ spec:
                 default: 0
                 type: integer
               name:
+                default: ''
                 type: string
               notes:
                 default: ''
@@ -203,7 +204,6 @@ spec:
                 default: sAMAccountName
                 type: string
             required:
-            - name
             - type
             type: object
         type: object
