--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -123,9 +123,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       HELM_EXPERIMENTAL_OCI: 1
-    strategy:
-      matrix:
-        version: ["v14", "v15", "v16", "v17"]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
@@ -147,32 +144,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt -r requirements-build.txt
-      - name: Dump CRDs
+      - name: Compare CRDs
         run: |
-          python3 -m appgate --spec-directory api_specs/${{ matrix.version }} dump-crd --version ${{ matrix.version }}
-      - name: Move CRDs to chart templates
-        run: |
-          mkdir k8s/crd/templates
-          mv *-crd.yml k8s/crd/templates/
-      - name: Read operator chart version
-        run: |
-          echo "chart_version=$(grep version: k8s/chart/Chart.yaml | awk '/version:/{print $NF}')" >> $GITHUB_ENV
-      - name: Set .name
-        uses: mikefarah/yq@master
-        with:
-          cmd: yq eval -i '.name = "sdp-operator-crd-${{ matrix.version }}"' k8s/crd/Chart.yaml
-      - name: set .description
-        uses: mikefarah/yq@master
-        with:
-          cmd: yq eval -i '.description = "A Helm chart for SDP Operator CRD ${{ matrix.version }}"' k8s/crd/Chart.yaml
-      - name: Set .version
-        uses: mikefarah/yq@master
-        with:
-          cmd: yq eval -i '.version = "${{ env.chart_version }}"' k8s/crd/Chart.yaml
-      - name: Set .appVersion
-        uses: mikefarah/yq@master
-        with:
-          cmd: yq eval -i '.appVersion = "${{ matrix.version }}"' k8s/crd/Chart.yaml
+          for version in $(seq 12 17); do
+            python3 -m appgate --spec-directory api_specs/v${version} dump-crd --version v${version}
+            echo '{{ if eq .Values.version '\"v"${version}"\"' }}' | cat - *-crd.yml > v${version}.yaml
+            echo '{{ end }}' >> v${version}.yaml
+            cmp k8s/crd/templates/v${version}.yaml v${version}.yaml || (echo "Generated CRDs and checked-in CRDs do not match." && exit 1)
+          done
       - uses: azure/setup-helm@v1
         with:
           version: 3.7.2
