--- a/k8s/crd/templates/v14.yaml
+++ b/k8s/crd/templates/v14.yaml
@@ -1,4 +1,4 @@
-{{ if .Values.version eq "v14" }}
+{{ if eq .Values.version "v14" }}
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
