Change action name to operator

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -60,7 +60,7 @@ jobs:
         run: |
           black --check --diff appgate tests
 
-  helm:
+  operator:
     runs-on: ubuntu-latest
     env:
       HELM_EXPERIMENTAL_OCI: 1
